# YeelightBulbManager-Qt

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Subscriber.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
icons/: icons.qrc  images.qrc
include/Model/: Device.hpp  Model.hpp  Singleton.hpp
include/Presenter/: Presenter.hpp  Publisher.hpp
include/Utils/FileReader/: FileReader.hpp  config.h.in
include/Widgets/: AddDeviceButton.hpp  AuthWidget.hpp  DeviceButton.hpp  DeviceWidget.h  DeviceWidget.hpp  FlowLayout.hpp  SettingsButton.hpp  ToggleButton.hpp
include/Widgets/AddDeviceWidgets/: AddDeviceWidget.hpp  AuthAccountWidget.hpp  DoneButton.hpp  IpAddrLineEdit.hpp  ManualAddWidget.hpp  PrettyLineEdit.hpp
src/: CMakeLists.txt
src/Device/: CMakeLists.txt
src/Model/: CMakeLists.txt  Device.cpp  Model.cpp
src/Presenter/: CMakeLists.txt  Presenter.cpp  Publisher.cpp
src/Utils/FileReader/: CMakeLists.txt  FileReader.cpp
src/Widgets/: AddDeviceButton.cpp  AuthWidget.cpp  CMakeLists.txt  DeviceButton.cpp  DeviceWidget.cpp  FlowLayout.cpp  SettingsButton.cpp  ToggleButton.cpp
src/Widgets/AddDeviceWidgets/: AddDeviceWidget.cpp  AuthAccountWidget.cpp  DoneButton.cpp  IpAddrLineEdit.cpp  ManualAddWidget.cpp  PrettyLineEdit.cpp
styles/: AddDeviceButton.css  AuthWidget.css  DeviceButton.css  MainWindow.css  ToggleButton.css  styles.qrc
styles/AddDeviceStyles/: ChooseWayToAddDeviceButton.css  ChooseWayToAddDeviceButton_Selected.css  DeviceNameLineEdit.css  DoneButton.css  Labels.css  ManualButton.css  PrettyLineEdit.css  PrettyLineEdit_Focussed.css  PrettyLineEdit_Incorrect.css  SpaceElementBeforeLineEdits.css  SpaceElementBetweenLineEdits.css
